[tech] provided user module realization
